[gd_scene load_steps=3 format=3 uid="uid://dybitf3a12nnp"]

[ext_resource type="Script" path="res://scripts/kill_area.gd" id="1_um5fy"]
[ext_resource type="AudioStream" uid="uid://4hbwekryavdg" path="res://assets/sfx/cherry_hurt.wav" id="2_0uw66"]

[node name="killArea" type="Area2D"]
collision_mask = 2
script = ExtResource("1_um5fy")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0uw66")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
